# pure-arch

./: .gitignore  README.md  arch_install.py  download-sid.sh  download.sh  install.conf  install.py  pure-arch-asciinema.sh  pure-arch-cloud-init-iso.sh  pure-arch-cloud-init-ssh.sh  pure-arch-commons.conf  pure-arch-commons.sh  pure-arch-desktop.sh  pure-arch-install.sh  pure-arch-kvm-virt-install.sh  pure-arch-laptop.sh  pure-arch-packages-asciinema.sh  pure-arch-packages-exit.sh  pure-arch-packages.conf  pure-arch-packages.sh  pure-arch-packer.sh  pure-arch-reboot.sh  pure-arch-recovery-asciinema.sh  pure-arch-recovery-reboot.sh  pure-arch-recovery.conf  pure-arch-recovery.sh  pure-arch-server.sh  pure-arch.conf  pure-arch.sh  pure_arch.sh  pyproject.toml  readme.md  readme.org  secure_arch.py  tests.sh
configs/: pure-arch-config-bios-ext4-grub-luks-lvm.sh  pure-arch-config-efi-btrfs-luks-lvm-systemd-aur.sh  pure-arch-config-efi-btrfs-systemd.sh  pure-arch-config-efi-ext4-grub-gnome.sh  pure-arch-config-efi-ext4-grub-i3-wm.sh  pure-arch-config-efi-ext4-grub-kde.sh  pure-arch-config-efi-ext4-grub-xfce.sh  pure-arch-config-efi-ext4-grub.sh  pure-arch-config-efi-ext4-luks-grub.sh  pure-arch-config-efi-ext4-luks-lvm-systemd-systemdhomed.sh  pure-arch-config-efi-ext4-luks-lvm-systemd-zsh.sh  pure-arch-config-efi-ext4-luks-lvm-systemd.sh  pure-arch-config-efi-ext4-luks-systemd.sh  pure-arch-config-efi-ext4-lvm-systemd.sh  pure-arch-config-efi-ext4-systemd-gnome-pipewire.sh  pure-arch-config-efi-ext4-systemd-gnome.sh  pure-arch-config-efi-ext4-systemd.sh  pure-arch-packer.json  (+1 more)
(+24 files in other folders)
