[project]
name = "pure-arch"
version = "0.1.0"
description = "A configuration-driven Arch Linux installer."
authors = [
  { name = "echjansen", email = "echjansen@outlook.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9.0", # Using Typer for a modern CLI experience
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Arch Linux",
]

[project.scripts]
pure-arch = "pure_arch.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["pure-arch"]

dependencies = [
    "requests~=2.31.0",         # External modules
    "pydantic~=2.5.2",          # External modules for validation
]

[project.optional-dependencies]
dev = [
    "pytest~=7.4.3",
    "black~=23.11.0",
    "mypy~=1.7.1",
    "ruff~=0.1.7",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--strict-markers"
